# Keras-MatMulLess

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  Ternary_Multiplication_in_Triton-Copy1.ipynb  Ternary_Multiplication_in_Triton.ipynb  Triton-Fusion.ipynb  bitlinear_test.py  conftest.py  install.py  pylintrc.toml  pyproject.toml  ruff.toml  towncrier.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  postCreateCommand.sh
.devcontainer/base/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/cuda/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build_nightly.yml  build_stable.yml  lint.yml  nightly_build.yml  nightly_push.yml  publish_pypi.yml  publish_testpypi.yml  publish_to_pypi.yml  publish_to_testpypi.yml  run_tests.yml  run_tests_on_main.yml  run_tests_on_pull_request.yml  run_tests_on_pull_to_release.yml  run_tests_on_release.yml  run_training_test.yml  run_training_tests.yml  stable_build.yml
.github/workflows/common/: publish_to_testpypi.yml
.github/workflows/training_scripts/: gated_linear_unit.py  mnist.py  time_series_forecasting.py  training_setup.py  transformers.py
docs/: Makefile  README.md  build.py  clean.py  make.bat
docs/jupyter_execute/getting-started/: tutorial.ipynb
docs/release/: +bump_deps_versions.misc.txt
docs/release/upcoming_changes/: +add_security_policy.misc.txt  +added_more_package_info.misc.txt  +call_annotation.added.txt  +clean_install_script.misc.txt  +configure_dependabot.misc.txt  +dense.added.txt  +docs.changed.txt  +downgrade_numpy.changed.txt  +fix_missing_call_convention.docs.txt  +fix_missing_sklearn_dep.fixed.txt  +fused_dense_torch.performance.txt  +glu.added.txt  +gru.added.txt  +gru_combine_kernel.performance.txt  +hover_tips.added.txt  +improve_community_standards.misc.txt  +lint.changed.txt  +lint_action.misc.txt  +loosen_version_requirements.changed.txt  +lru.added.txt  +math_block_ugliness.docs.txt  +missing_type_annotation.fixed.txt  +more_parameters_for_gru.added.txt  +more_parameters_for_lru.added.txt  +more_tests.misc.txt  +move_devcontainer_settings.misc.txt  +new_homepage_look.docs.txt  +patches_layer.added.txt  +recurrent_units_explanations.docs.txt  +redo_actions.misc.txt  +relocate_token_embedding.changed.txt  +remove_3.12_support.removed.txt  +remove_spurious_defaults.docs.txt  +reorg_poetry_dependency_groups.changed.txt  +replace_pylint_with_ruff.changed.txt  +rmsnorm.added.txt  +stable_build_fix.misc.txt  +ternary_multiplication.performance.txt  +test_pypi_action.misc.txt  +tests_split.changed.txt  (+5 more)
docs/source/: api.md  conf.py  index.md  objects_keras.inv  requirements.txt
docs/source/_static/: custom.css  version-alert.js
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/api/: index.md
docs/source/examples/: autoencoders.ipynb  fraud-detection.ipynb  gated-linear-unit.ipynb  hyperparameter-tuning.ipynb  index.md  mnist-classifier.ipynb  time-series-forecasting.ipynb  transformers.ipynb  vision-transformers.ipynb
docs/source/explanations/: dense.ipynb  dense.md  gru-and-lru.ipynb  gru-and-lru.md  index.md  rationale.md  transformers.md
docs/source/getting-started/: index.md  installation.md  tutorial.ipynb  tutorial.md
experiments/: mnist_classifier.ipynb  time_series_forecasting.ipynb  time_series_forecasting_v2.ipynb
keras_matmulless/: something.py
keras_mml/: __init__.py
keras_mml/layers/: __init__.py  activations.py  bit_linear.py  core.py  dense.py  glu.py  gru.py  lru.py  misc.py  normalizations.py  recurrent.py  rms_norm.py  transformer.py
keras_mml/layers/_activations/: __init__.py  bilinear.py  geglu.py  glu.py  reglu.py  seglu.py  swiglu.py
keras_mml/layers/_core/: __init__.py  dense.py
keras_mml/layers/_dense_impl/: __init__.py  backend_dense.py  base_dense.py  fallback_dense.py  jax_dense.py  tensorflow_dense.py  torch_dense.py
keras_mml/layers/_misc/: __init__.py  transformer.py
keras_mml/layers/_normalizations/: __init__.py  rms_norm.py
keras_mml/layers/_recurrent/: __init__.py  gru.py  lru.py
keras_mml/layers/_transformer/: __init__.py
keras_mml/layers/activations/: __init__.py  bilinear.py  geglu.py  glu.py  reglu.py  seglu.py  swiglu.py
keras_mml/layers/core/: __init__.py  dense.py  embedding.py
keras_mml/layers/dense/: __init__.py  base.py  base_dense.py  dense.py  dense_actual.py  fallback_dense.py  torch_dense.py
keras_mml/layers/misc/: __init__.py  patches.py  rms_norm.py
keras_mml/layers/normalizations/: __init__.py  quant_rms_norm.py  rms_norm.py
keras_mml/layers/recurrent/: __init__.py  gru.py  lru.py  rnn.py
keras_mml/layers/transformer/: __init__.py  attention.py  embedding.py  transformer.py
keras_mml/utils/: __init__.py  array.py  misc.py  numba.py  validation.py
keras_mml/utils/array/: __init__.py  encoding.py  ternary_multiplication.py
keras_mml/utils/misc/: __init__.py  coverage.py  number.py
keras_mml/utils/triton/: __init__.py  checks.py  helpers.py
requirements/cpu/: requirements-jax.txt  requirements-tensorflow.txt  requirements-torch.txt
requirements/cuda/: requirements-jax.txt  requirements-tensorflow.txt  requirements-torch.txt
ternary_multiplication/: __init__.py  backend_multiplication.py  jax_multiplication.py  tensorflow_multiplication.py  torch_multiplication.py
ternary_multiplication/tensorflow/: BUILD  __init__.py
ternary_multiplication/torch/: __init__.py
ternary_multiplication/torch/mul/: __init__.py  mul.py  mul_2d.py  mul_nd.py
tests/: test_import.py
tests/layers/: test_dense.py  test_glu.py  test_gru.py  test_misc.py  test_recurrent.py  test_rmsnorm.py
tests/layers/_dense_impl/: setup.py  test_pytorch.py  test_tensorflow.py
tests/layers/activations/: test_glu.py  test_swiglu.py  (+1 more)
tests/utils/: test_array.py  test_as_array.py  test_misc.py  test_numba.py  test_tenary_array.py  test_validation.py
(+57 files in other folders)
