[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.poetry]
name = "keras-matmulless"
version = "0.0.0"
description = "Keras layers without using matrix multiplications."
license = "MIT"
authors = ["PhotonicGluon <25820201+PhotonicGluon@users.noreply.github.com>"]
readme = "README.md"
keywords = []
classifiers = []
packages = [{ include = "keras_mml" }]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.9"

# Main dependencies
keras = "~3.3.3"
numpy = "~1.26.4"
overrides = "~7.7.0"

# Others
poetry-dynamic-versioning = { extras = ["plugin"], version = "~1.4.0" }

[tool.poetry.group.dev.dependencies]
# Tests
pytest = "~8.2.2"
pytest-cov = "~5.0.0"

# Docs
myst-parser = "~3.0.1"
sphinx = "~7.3.7"
furo = "2024.5.6"
sphinx-copybutton = "~0.5.2"
sphinx-design = "~0.6.0"
sphinx-autodoc-typehints = "~2.1.1"
sphinx-autobuild = "2024.4.16"
myst-nb = "~1.1.0"

[tool.poetry.group.tensorflow]
optional = true

[tool.poetry.group.tensorflow.dependencies]
tensorflow = "~2.16.1"

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
torch = { version = "^2.3.1+cpu", source = "pytorch-cpu" }
torchvision = { version = "^0.18.1+cpu", source = "pytorch-cpu" }
torchaudio = { version = "^2.3.1+cpu", source = "pytorch-cpu" }

[tool.poetry.group.jax]
optional = true

[tool.poetry.group.jax.dependencies]
jax = { version = "<0.4.29", extras = ["cpu"] }

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"
notebook = "~7.2.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""
fix-shallow-repository = true
