[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.poetry]
name = "keras-matmulless"
version = "0.0.0"
description = "Keras layers without using matrix multiplications."
license = "Apache-2.0"
authors = ["PhotonicGluon <25820201+PhotonicGluon@users.noreply.github.com>"]
readme = "README.md"
keywords = ["tensorflow", "pytorch", "jax", "keras", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
packages = [{ include = "keras_mml" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# Main dependencies
keras = "~3.3.3"
numpy = [
    { version = "~1.23.5", markers = "python_version < \"3.12\"" },
    { version = "~1.26.0", markers = "python_version >= \"3.12\"" },
]
einops = "~0.8.0"
jaxtyping = "~0.2.31"
ml-dtypes = "~0.3.2"

# Others
poetry-dynamic-versioning = { extras = ["plugin"], version = "~1.4.0" }

[tool.poetry.group.dev.dependencies]
# Tests
pytest = "~8.2.2"
pytest-cov = "~5.0.0"
pytest-xdist = "~3.6.1"

# Docs
myst-parser = "~3.0.1"
sphinx = "~7.3.7"
furo = "2024.5.6"
sphinx-copybutton = "~0.5.2"
sphinx-design = "~0.6.0"
sphinx-autodoc-typehints = "~2.1.1"
sphinx-autobuild = "2024.4.16"
myst-nb = "~1.1.0"
sphinx-tippy = "~0.4.3"

# Building and release
pylint = "~3.2.5"
towncrier = "~23.11.0"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
nvidia-cublas-cu12 = "~12.3.4.1"
nvidia-cuda-cupti-cu12 = "~12.3.101"
nvidia-cuda-nvcc-cu12 = "~12.3.107"
nvidia-cuda-nvrtc-cu12 = "~12.3.107"
nvidia-cuda-runtime-cu12 = "~12.3.101"
nvidia-cudnn-cu12 = "~8.9.7.29"
nvidia-cufft-cu12 = "~11.0.12.1"
nvidia-curand-cu12 = "~10.3.4.107"
nvidia-cusolver-cu12 = "~11.5.4.101"
nvidia-cusparse-cu12 = "~12.2.0.103"
nvidia-nccl-cu12 = "~2.19.3"
nvidia-nvjitlink-cu12 = "~12.3.101"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"
notebook = "~7.2.1"
pandas = "~2.0.3"
seaborn = "~0.13.2"
matplotlib = "~3.9.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja-imports = [{ module = "datetime", item = "datetime" }]
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif "POETRY_IS_NIGHTLY_BUILD" in env and env["POETRY_IS_NIGHTLY_BUILD"] == "true" -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=datetime.now().strftime("%Y%m%d%H")) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""
fix-shallow-repository = true

[tool.poetry-dynamic-versioning.substitution]
files = [
    "*.py",
    "*/__init__.py",
    "*/__version__.py",
    "*/_version.py",
    "docs/source/conf.py",
]
patterns = [
    "(^__version__\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])",
    { value = "(^__version_tuple__\\s*(?::.*?)?=\\s*\\()[^)]*(\\))", mode = "tuple" },
    "(^release\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])",
]
